<?xml version="1.0"?>
<package format="2">
  <name>romea_odo_description</name>
  <version>0.0.0</version>
  <description>The romea_odo_description package</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/four_wheel_steering_description</url> -->

  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>urdf</depend>

</package>
